# Clea

./: README.md  clea.cabal
app/: Main.hs
lib/: std.clea
src/: Ast.hs  Eval.hs  Lexer.x  Parser.y  Prologue.hs  Scope.hs
test/: EvalSpec.hs
