name:                clea
version:             0.1.0
synopsis:            a tiny lisp dialect
description:         Please see README.md
homepage:            https://github.com/zjhmale/Clea
license:             BSD3
license-file:        LICENSE
author:              zjhmale
maintainer:          zjhmale@gmail.com
copyright:           2016 zjhmale
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ast
                     , Eval
                     , Scope
                     , Prologue
                     , Lexer
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , mtl
  build-tools:         happy
                     , alex
  default-language:    Haskell2010

executable clea
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clea
                     , containers
                     , lens
                     , haskeline
                     , mtl
  default-language:    Haskell2010

test-suite clea-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clea
                     , hspec
                     , containers
                     , pretty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zjhmale/Clea
